# market-forecaster

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-model.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DEPLOY.md  architecture.drawio  architecture.md  architecture.puml  sequence.drawio  sequence.puml
market_forecaster/: __init__.py  __main__.py  app.py  config.py  formatting.py  logging_setup.py  models.py  pipeline.py  scheduler.py
market_forecaster/data/: __init__.py  base.py  chained.py  finnhub.py  yahoo.py
market_forecaster/forecast/: __init__.py  base.py  baseline.py  timesfm_forecaster.py
market_forecaster/narrative/: __init__.py  ollama.py
tests/: conftest.py  test_app.py  test_baseline.py  test_config.py  test_data_sources.py  test_logging_redaction.py  test_ollama.py  test_pipeline.py  test_scheduler.py  test_timesfm_quantiles.py
