[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-forecaster"
version = "0.1.0"
description = "Scheduled + on-demand NASDAQ/NZX50 forecasts (TimesFM + Ollama narrative) over HTTP."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["market_forecaster*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
